--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
 
 <body>
 
+  <div class="navigation">
+    <h2>Fun Bus</h2>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </div>
   
+  <div class="header">
+    <div class="header-img">
+      <img src="img/fun-bus.jpg" alt="fun bus">
+    </div>
+    <div class="header-text">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Traveling expedition, modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+    </div>
+  </div>
+
+
      
   <div class="container home">
    
