contact form stretch

--- a/index.html
+++ b/index.html
@@ -86,6 +86,36 @@
     </section>
   </div><!-- container -->
 
+  <div class="table"> <!-- contact form -->
+    <form action="#">
+  
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+      <label for="pnumber">Phone Number</label>
+      <input type="text" id="pnumber" name="phone" placeholder="Your Phone Number..">
+
+      <label for="email">Last Name</label>
+      <input type="text" id="email" name="email" placeholder="Your Email Address">
+  
+      <label for="package">Vacation Package</label>
+      <select id="package" name="package">
+        <option value="USA">USA</option>
+        <option value="Europe">Europe</option>
+        <option value="Asia">Asia</option>
+      </select>
+  
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
+  
+    </form>
+  </div>
+
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
